name:                bruce-protocol
version:             0.1.0
synopsis:            Protocol of Bruce, a Kafka producer daemon.
license:             MPL-2.0
license-file:        LICENSE
author:              Roman S. Borschel
maintainer:          roman@pkaboo.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Bruce.Protocol

    build-depends:
        base       == 4.*
      , bytestring >= 0.10
      , cereal     >= 0.4

test-suite bruce-protocol-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   test
    ghc-options:      -threaded -Wall -O2 -fwarn-tabs

    build-depends:
          base
        , bytestring
        , cereal
        , bruce-protocol
        , QuickCheck
        , tasty            >= 0.8
        , tasty-quickcheck >= 0.8
        , time
